# 079Project

./: .gitignore  CMakeLists.txt  README.md  addon.cpp  addon.hpp  algorithm.md  auth_frontend_server.cjs  frontend_server.cpp  frontend_server.hpp  main.cjs  main.cpp  server.cjs  transformer.hpp  transformer_main.cpp
079project_frontend/: package-lock.json  package.json
079project_frontend/src/: App.css  App.js  App.test.js  index.css
079project_frontend/src/api/: client.js
079project_frontend/src/components/: AuthGate.js  ConfigPanel.js
