cmake_minimum_required(VERSION 3.20)
project(phoenix_main_cpp LANGUAGES CXX)

option(BUILD_STATIC "Try to build a static single-file binary" ON)
option(WINDOWS_EXE "Build a Windows .exe (requires Windows toolchain on non-Windows)" OFF)
option(ENABLE_REDIS "Enable redis-plus-plus" ON)
option(ENABLE_LMDB "Enable LMDB" ON)
option(ENABLE_GUMBO "Enable gumbo" ON)
option(ENABLE_POPPLER "Enable poppler" ON)
option(ENABLE_CURL "Enable libcurl" ON)
option(ENABLE_RPI_CROSS "Enable cross-compile for Raspberry Pi OS (AArch64)" OFF)

set(RPI_CPU "cortex-a53" CACHE STRING "Target CPU for Raspberry Pi (e.g. cortex-a53, cortex-a55)")
set(RPI_SYSROOT "" CACHE PATH "Raspberry Pi sysroot path")
set(RPI_TOOLCHAIN_PREFIX "aarch64-linux-gnu" CACHE STRING "Cross toolchain prefix (e.g. aarch64-linux-gnu)")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE OFF)

# --- Target classification: allow selecting target OS and CPU for cross/build configuration ---
# Provide two cache variables: TARGET_SYSTEM and TARGET_CPU. Users can pass them via -D.
set(TARGET_SYSTEM "" CACHE STRING "Target system (examples: win11, win10, win7, ubuntu22.04, ubuntu22.10, ubuntu24.04, centos9stream, centos6, kali2025.2, raspberry_pi_os, debian12)")
set(TARGET_CPU "" CACHE STRING "Target CPU (examples: esp32-s3, cortex-a53, cortex-a55, i686, x86_64, x64, riscv)")

string(TOLOWER "${TARGET_SYSTEM}" TARGET_SYSTEM_LC)
string(TOLOWER "${TARGET_CPU}" TARGET_CPU_LC)

# If user did not set TARGET_SYSTEM, default to host detection
if(TARGET_SYSTEM_LC STREQUAL "")
  if(WIN32)
    set(TARGET_SYSTEM_LC "win11")
  else()
    set(TARGET_SYSTEM_LC "linux")
  endif()
endif()

set(TARGET_OS_FAMILY "Unknown")
if(TARGET_SYSTEM_LC MATCHES "^win")
  set(TARGET_OS_FAMILY "Windows")
  # ensure option WINDOWS_EXE is on when targeting Windows
  set(WINDOWS_EXE ON CACHE BOOL "Build a Windows .exe (requires Windows toolchain on non-Windows)" FORCE)
elseif(TARGET_SYSTEM_LC MATCHES "ubuntu" OR TARGET_SYSTEM_LC MATCHES "centos" OR TARGET_SYSTEM_LC MATCHES "debian" OR TARGET_SYSTEM_LC MATCHES "kali" OR TARGET_SYSTEM_LC MATCHES "linux" OR TARGET_SYSTEM_LC MATCHES "raspberry")
  set(TARGET_OS_FAMILY "Linux")
else()
  set(TARGET_OS_FAMILY "${TARGET_SYSTEM_LC}")
endif()

# Detect host OS family to decide whether to force cross settings
if(WIN32)
  set(HOST_OS_FAMILY "Windows")
elseif(UNIX)
  set(HOST_OS_FAMILY "Linux")
else()
  set(HOST_OS_FAMILY "Unknown")
endif()

message(STATUS "CMake: Host OS family='${HOST_OS_FAMILY}'")

# Map common CPU tokens to a CMake-compatible processor string
set(TARGET_PROCESSOR "")
if(TARGET_CPU_LC MATCHES "cortex-a53")
  set(TARGET_PROCESSOR "aarch64")
  set(RPI_CPU "cortex-a53" CACHE STRING "Target CPU for Raspberry Pi (e.g. cortex-a53, cortex-a55)")
elseif(TARGET_CPU_LC MATCHES "cortex-a55")
  set(TARGET_PROCESSOR "aarch64")
  set(RPI_CPU "cortex-a55" CACHE STRING "Target CPU for Raspberry Pi (e.g. cortex-a53, cortex-a55)")
elseif(TARGET_CPU_LC MATCHES "i686")
  set(TARGET_PROCESSOR "i686")
elseif(TARGET_CPU_LC MATCHES "x86_64" OR TARGET_CPU_LC MATCHES "x64")
  set(TARGET_PROCESSOR "x86_64")
elseif(TARGET_CPU_LC MATCHES "risc" OR TARGET_CPU_LC MATCHES "risc-v" OR TARGET_CPU_LC MATCHES "riscv")
  set(TARGET_PROCESSOR "riscv64")
elseif(TARGET_CPU_LC MATCHES "esp32" OR TARGET_CPU_LC MATCHES "esp32-s3")
  set(TARGET_PROCESSOR "xtensa")
endif()

if(NOT TARGET_PROCESSOR STREQUAL "")
  if(NOT TARGET_OS_FAMILY STREQUAL HOST_OS_FAMILY OR ENABLE_RPI_CROSS)
    set(CMAKE_SYSTEM_PROCESSOR "${TARGET_PROCESSOR}" CACHE STRING "Target processor" FORCE)
    message(STATUS "CMake: mapped TARGET_CPU='${TARGET_CPU}' -> CMAKE_SYSTEM_PROCESSOR='${CMAKE_SYSTEM_PROCESSOR}'")
  else()
    message(STATUS "CMake: Host and target OS family match ('${HOST_OS_FAMILY}'); will NOT set CMAKE_SYSTEM_PROCESSOR to avoid forcing cross-compilation. Using native compiler toolchain.")
  endif()
endif()

message(STATUS "CMake: Target system='${TARGET_SYSTEM_LC}', OS family='${TARGET_OS_FAMILY}', Target CPU='${TARGET_CPU_LC}'")

# Note: For special toolchains (esp32-s3, riscv, etc.) a proper toolchain file is still required
# Example: -DCMAKE_TOOLCHAIN_FILE=/path/to/esp32/toolchain.cmake
# This mapping only sets helpful variables and triggers some existing Raspberry Pi flags.


if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

if (ENABLE_RPI_CROSS)
  set(CMAKE_SYSTEM_NAME Linux)
  set(CMAKE_SYSTEM_PROCESSOR aarch64)
  if (NOT CMAKE_C_COMPILER)
    set(CMAKE_C_COMPILER "${RPI_TOOLCHAIN_PREFIX}-gcc")
  endif()
  if (NOT CMAKE_CXX_COMPILER)
    set(CMAKE_CXX_COMPILER "${RPI_TOOLCHAIN_PREFIX}-g++")
  endif()
  if (RPI_SYSROOT)
    set(CMAKE_SYSROOT "${RPI_SYSROOT}")
    set(CMAKE_FIND_ROOT_PATH "${RPI_SYSROOT}")
    set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
    set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
    set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
    set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
  endif()
endif()

if (WIN32 OR WINDOWS_EXE)
  set(CMAKE_EXECUTABLE_SUFFIX ".exe")
endif()

add_executable(phoenix_main main.cpp addon.cpp)
target_compile_features(phoenix_main PRIVATE cxx_std_20)

# Hint for Drogon on Debian/Kali (only set if not provided)
if (NOT Drogon_DIR AND UNIX AND NOT APPLE)
  set(Drogon_DIR "/usr/lib/x86_64-linux-gnu/cmake/Drogon" CACHE PATH "Path to DrogonConfig.cmake")
endif()
message(STATUS "Drogon_DIR: ${Drogon_DIR}")

find_package(Drogon CONFIG REQUIRED)

find_package(nlohmann_json CONFIG QUIET)
if (NOT nlohmann_json_FOUND)
  message(FATAL_ERROR "nlohmann_json not found. Please install nlohmann_json and set nlohmann_json_DIR or CMAKE_PREFIX_PATH.")
endif()

find_package(jwt-cpp CONFIG QUIET)
if (NOT jwt-cpp_FOUND)
  message(FATAL_ERROR "jwt-cpp not found. Please install jwt-cpp and set jwt-cpp_DIR or CMAKE_PREFIX_PATH.")
endif()

target_link_libraries(phoenix_main PRIVATE Drogon::Drogon nlohmann_json::nlohmann_json jwt-cpp::jwt-cpp)

if (MSVC)
  target_compile_options(phoenix_main PRIVATE /W4 /permissive-)
  if (BUILD_STATIC)
    set_property(TARGET phoenix_main PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
  endif()
else()
  target_compile_options(phoenix_main PRIVATE -Wall -Wextra -Wpedantic)
  if (ENABLE_RPI_CROSS)
    target_compile_options(phoenix_main PRIVATE -mcpu=${RPI_CPU} -mtune=${RPI_CPU})
    target_link_options(phoenix_main PRIVATE -mcpu=${RPI_CPU} -mtune=${RPI_CPU})
  endif()
endif()

if (WIN32)
  target_link_libraries(phoenix_main PRIVATE ws2_32 psapi)
endif()

if (ENABLE_REDIS)
  find_package(redis++ QUIET)
  if (redis++_FOUND)
    target_compile_definitions(phoenix_main PRIVATE HAVE_REDIS)
    target_link_libraries(phoenix_main PRIVATE redis++::redis++)
  endif()
endif()

if (ENABLE_LMDB)
  find_path(LMDB_INCLUDE_DIR lmdb.h)
  find_library(LMDB_LIBRARY lmdb)
  if (LMDB_INCLUDE_DIR AND LMDB_LIBRARY)
    target_include_directories(phoenix_main PRIVATE ${LMDB_INCLUDE_DIR})
    target_link_libraries(phoenix_main PRIVATE ${LMDB_LIBRARY})
    target_compile_definitions(phoenix_main PRIVATE HAVE_LMDB)
  endif()
endif()

if (ENABLE_GUMBO)
  find_path(GUMBO_INCLUDE_DIR gumbo.h)
  find_library(GUMBO_LIBRARY gumbo)
  if (GUMBO_INCLUDE_DIR AND GUMBO_LIBRARY)
    target_include_directories(phoenix_main PRIVATE ${GUMBO_INCLUDE_DIR})
    target_link_libraries(phoenix_main PRIVATE ${GUMBO_LIBRARY})
    target_compile_definitions(phoenix_main PRIVATE HAVE_GUMBO)
  endif()
endif()

if (ENABLE_POPPLER)
  find_package(PkgConfig QUIET)
  if (PKG_CONFIG_FOUND)
    pkg_check_modules(POPPLER QUIET poppler-cpp)
    if (POPPLER_FOUND)
      target_include_directories(phoenix_main PRIVATE ${POPPLER_INCLUDE_DIRS})
      target_link_libraries(phoenix_main PRIVATE ${POPPLER_LIBRARIES})
      target_compile_definitions(phoenix_main PRIVATE HAVE_POPPLER)
    endif()
  endif()
endif()

if (ENABLE_CURL)
  find_package(CURL QUIET)
  if (CURL_FOUND)
    target_link_libraries(phoenix_main PRIVATE CURL::libcurl)
    target_compile_definitions(phoenix_main PRIVATE HAVE_CURL)
  endif()
endif()

if (BUILD_STATIC)
  if (UNIX AND NOT APPLE)
    get_target_property(DROGON_TYPE Drogon::Drogon TYPE)
    if (DROGON_TYPE STREQUAL "SHARED_LIBRARY")
      message(WARNING "BUILD_STATIC=ON but Drogon is shared; skipping -static to avoid link errors.")
    else()
      target_link_options(phoenix_main PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
  endif()
endif()

set_property(TARGET phoenix_main PROPERTY INTERPROCEDURAL_OPTIMIZATION $<CONFIG:Release>)

message(STATUS "Drogon: ${Drogon_VERSION}")
